Fix an "overflow" on hover
Change the animation range and timing

--- a/style/themes/default-light.css
+++ b/style/themes/default-light.css
@@ -11,6 +11,7 @@
 .main-header .navbar .nav > li > a,
 .main-header .navbar .nav > li > .navbar-text {
   color: #fff;
+  max-height: 50px;
 }
 .main-header .navbar .nav > li > a:hover,
 .main-header .navbar .nav > li > a:active,
